enabled VisibilitaAnimations for Composite (see Bug 324438 - [Theming] Extend and enhance animations)

--- a/bundles/org.eclipse.rap.rwt/widgetkits/org/eclipse/swt/internal/widgets/compositekit/Composite.default.css
+++ b/bundles/org.eclipse.rap.rwt/widgetkits/org/eclipse/swt/internal/widgets/compositekit/Composite.default.css
@@ -19,6 +19,7 @@ Composite {
   border: none;
   border-radius: 0;
   box-shadow: none;
+  animation: none;
 }
 
 Composite[BORDER] {
